--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               Meet new and interesting dogs nearby.
             </h1>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-              <button type="button" class="btn btn-light btn-lg px-4 me-md-2">
+              <button type="button" class="btn btn-light btn-lg px-4 me-md-2 mb-2">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="16"
@@ -55,7 +55,7 @@
                 </svg>
                 Download
               </button>
-              <button type="button" class="btn btn-outline-light btn-lg px-4">
+              <button type="button" class="btn btn-outline-light btn-lg px-4 mb-5 ">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="16"
@@ -135,16 +135,16 @@
           </div>
           <div class="container">
             <div class="row">
-              <div class="col-lg-3 col-sm-12">
+              <div class="col-lg-3 col-sm-12 my-3">
                 <img src="./images/techcrunch.png" height="30">
               </div>
-              <div class="col-lg-3 col-sm-12">
+              <div class="col-lg-3 col-sm-12 my-3">
                 <img src="./images/mashable.png" height="30">
               </div>
-              <div class="col-lg-3 col-sm-12">
+              <div class="col-lg-3 col-sm-12 my-3">
                 <img src="./images/bizinsider.png" height="30">
               </div>
-              <div class="col-lg-3 col-sm-12">
+              <div class="col-lg-3 col-sm-12 my-3">
                 <img src="./images/tnw.png" height="30">
               </div>
             </div>
