--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               Meet new and interesting dogs nearby.
             </h1>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-              <button type="button" class="btn btn-light btn-lg px-4 me-md-2 mb-2">
+              <button type="button" class="btn btn-light btn-lg px-4 mb-2">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="16"
@@ -55,7 +55,7 @@
                 </svg>
                 Download
               </button>
-              <button type="button" class="btn btn-outline-light btn-lg px-4 mb-5 ">
+              <button type="button" class="btn btn-outline-light btn-lg px-4 mb-2">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="16"
